--- a/guiApp/MainPage.xaml
+++ b/guiApp/MainPage.xaml
@@ -70,16 +70,40 @@
         </StackPanel>
 
         <Grid>
+            
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <RichEditBox Grid.Row="1" Grid.Column="0" Background="Black"/>
-            <RichEditBox Grid.Row="1" Grid.Column="1" Background="Black"/>
-            <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <RichEditBox Grid.Row="1" Grid.Column="0" Background="Black" IsReadOnly="True" AllowFocusOnInteraction="False" IsFocusEngagementEnabled="False" IsFocusEngaged="False"/>
+            <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
+            <Grid>
+                <Grid.RowDefinitions>
 
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <ListView Grid.Column="0" Loaded="ListView_Loaded" x:Name="Items">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+
+                                <TextBlock x:Name="RowContent" Text="{Binding}"/>
+                                <ToggleSwitch x:Name="Toggle" Grid.Column="1" Toggled="Toggle_Toggled"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
