--- a/guiApp/MainPage.xaml
+++ b/guiApp/MainPage.xaml
@@ -76,14 +76,13 @@
             </StackPanel>
 
             <Grid Grid.Row="1">
-                <Grid.RowDefinitions>
-
-                </Grid.RowDefinitions>
+                
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
+                
                 <ListView Grid.Column="0" Loaded="ListView_Loaded" x:Name="Items">
                     <ListView.ItemTemplate>
                         <DataTemplate>
@@ -93,12 +92,17 @@
                                     <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
 
-                                <TextBlock x:Name="RowContent" Text="{Binding}"/>
+                                <TextBlock x:Name="RowContent" Text="{Binding}" VerticalAlignment="Center"/>
                                 <ToggleSwitch x:Name="Toggle" Grid.Column="1" Toggled="Toggle_Toggled"/>
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
+
+                <ListView Grid.Column="1" Background="Aquamarine"/>
+                <ListView Grid.Column="2" Background="Violet"/>
+
+
             </Grid>
             
             <RichEditBox Grid.Row="2" Grid.Column="0" Background="Black" IsReadOnly="True" AllowFocusOnInteraction="False" IsFocusEngagementEnabled="False" IsFocusEngaged="False"/>
