--- a/guiApp/MainPage.xaml
+++ b/guiApp/MainPage.xaml
@@ -83,13 +83,20 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 
-                <ListView Grid.Column="0" Loaded="ListView_Loaded" x:Name="Items">
+                <ListView Grid.Column="0" Loaded="ListView_Loaded" x:Name="Items" CanDragItems="True" CanReorderItems="True">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Padding" Value="0"/>
+                            <Setter Property="Margin" Value="0"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <Grid>
+                            <Grid Margin="10" ColumnSpacing="50">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
 
                                 <TextBlock x:Name="RowContent" Text="{Binding}" VerticalAlignment="Center"/>
@@ -97,9 +104,14 @@
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
+                    
                 </ListView>
 
-                <ListView Grid.Column="1" Background="Aquamarine"/>
+                <ListView Grid.Column="1" Background="Aquamarine">
+                    <Grid>
+                        
+                    </Grid>
+                </ListView>
                 <ListView Grid.Column="2" Background="Violet"/>
 
 
