--- a/guiApp/MainPage.xaml
+++ b/guiApp/MainPage.xaml
@@ -83,7 +83,7 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 
-                <ListView Grid.Column="0" Loaded="ListView_Loaded" x:Name="Items" CanDragItems="True" CanReorderItems="True">
+                <ListView Grid.Column="0" Loaded="ListView_Loaded" x:Name="Items" CanDragItems="False" CanReorderItems="False">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="Padding" Value="0"/>
@@ -108,9 +108,19 @@
                 </ListView>
 
                 <ListView Grid.Column="1" Background="Aquamarine">
-                    <Grid>
-                        
-                    </Grid>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Margin="10" >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <TextBlock x:Name="RowContent" Text="{Binding}" VerticalAlignment="Center"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                    
+
                 </ListView>
                 <ListView Grid.Column="2" Background="Violet"/>
 
