--- a/guiApp/MainPage.xaml
+++ b/guiApp/MainPage.xaml
@@ -119,7 +119,8 @@
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                    
+                    <Button x:Name="button" Content="Button"/>
+
 
                 </ListView>
                 <ListView Grid.Column="2" Background="Violet"/>
