--- a/guiApp/MainPage.xaml
+++ b/guiApp/MainPage.xaml
@@ -76,7 +76,7 @@
             </StackPanel>
 
             <Grid Grid.Row="1">
-                
+
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="1*"/>
@@ -108,34 +108,30 @@
                 </ListView>
 
                 <Grid Grid.Column="1">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <StackPanel 
-                    Grid.Column="1" 
-                    Background="Aquamarine">
+                    <RelativePanel HorizontalAlignment="Stretch"  VerticalAlignment="Stretch">
                         <Button Content="Cancel" 
-                            HorizontalAlignment="Stretch"
-                            Style="{StaticResource AccentButtonStyle}"/>
-                    </StackPanel>
+                                Style="{StaticResource AccentButtonStyle}" 
+                                MinWidth="300"
+                                Margin="10"
+                                RelativePanel.AlignBottomWithPanel="True"
+                                RelativePanel.AlignHorizontalCenterWithPanel="True"/>
+
+                    </RelativePanel>
                 </Grid>
 
-                
+                <Grid Grid.Column="2">
+                    <RelativePanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Button Content="Run" 
+                                Style="{StaticResource AccentButtonStyle}"
+                                MinWidth="300"
+                                Margin="10"
+                                RelativePanel.AlignBottomWithPanel="True"
+                                RelativePanel.AlignHorizontalCenterWithPanel="True"
+                                Click="Run_Test_Execution"/>
 
-                <StackPanel 
-                    Grid.Column="2" 
-                    Background="Violet">
+                    </RelativePanel>
 
-                    <Button 
-                        Content="Run" 
-                        HorizontalAlignment="Stretch" 
-                        Style="{StaticResource AccentButtonStyle}" 
-                        Click="Run_Test_Execution"/>
-
-                </StackPanel>
-
-
+                </Grid>
             </Grid>
 
             <RichEditBox
@@ -152,7 +148,7 @@
 
 
             <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" />
-            
+
         </Grid>
     </Grid>
 </Page>
