Data bind for each individal item in list view.... WIP;  this makes each item selectable indovidually

--- a/guiApp/MainPage.xaml
+++ b/guiApp/MainPage.xaml
@@ -99,8 +99,8 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
 
-                                <TextBlock x:Name="RowContent" Text="{Binding}" VerticalAlignment="Center"/>
-                                <ToggleSwitch x:Name="Toggle" Grid.Column="1" Toggled="Toggle_Toggled"/>
+                                <TextBlock x:Name="RowContent" Text="{Binding DLLObjectName}" VerticalAlignment="Center"/>
+                                <ToggleSwitch x:Name="Toggle" Grid.Column="1" Toggled="Toggle_Toggled" IsOn="False"/>
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
