Moved file picker to JSON, allowed JSON parsing to work

--- a/guiApp/MainPage.xaml
+++ b/guiApp/MainPage.xaml
@@ -99,7 +99,7 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
 
-                                <TextBlock x:Name="RowContent" Text="{Binding DLLObjectName}" VerticalAlignment="Center"/>
+                                <TextBlock x:Name="RowContent" Text="{Binding}" VerticalAlignment="Center"/>
                                 <ToggleSwitch x:Name="Toggle" Grid.Column="1" Toggled="Toggle_Toggled" IsOn="False"/>
                             </Grid>
                         </DataTemplate>
