Removed Access Menu Clutter

--- a/guiApp/MainPage.xaml
+++ b/guiApp/MainPage.xaml
@@ -28,17 +28,17 @@
                 <TextBlock x:Name="SelectedOptionText" Text="" />
                 <muxc:MenuBar>
                     <muxc:MenuBarItem Title="File">
-                        <MenuFlyoutItem x:Name="New" Text="New" Click="OnElementClicked">
+                        <!--<MenuFlyoutItem x:Name="New" Text="New" Click="OnElementClicked">
                             <MenuFlyoutItem.KeyboardAccelerators>
                                 <KeyboardAccelerator Modifiers="Control" Key="N"/>
                             </MenuFlyoutItem.KeyboardAccelerators>
-                        </MenuFlyoutItem>
+                        </MenuFlyoutItem>-->
                         <MenuFlyoutItem x:Name="Open"  Text="Open..." Click="OpenFilePicker_Click">
                             <MenuFlyoutItem.KeyboardAccelerators>
                                 <KeyboardAccelerator Modifiers="Control" Key="O"/>
                             </MenuFlyoutItem.KeyboardAccelerators>
                         </MenuFlyoutItem>
-                        <MenuFlyoutItem Text="Save">
+                        <!--<MenuFlyoutItem Text="Save">
                             <MenuFlyoutItem.KeyboardAccelerators>
                                 <KeyboardAccelerator Modifiers="Control" Key="S"/>
                             </MenuFlyoutItem.KeyboardAccelerators>
@@ -47,10 +47,10 @@
                             <MenuFlyoutItem.KeyboardAccelerators>
                                 <KeyboardAccelerator Modifiers="Control" Key="E"/>
                             </MenuFlyoutItem.KeyboardAccelerators>
-                        </MenuFlyoutItem>
+                        </MenuFlyoutItem>-->
                     </muxc:MenuBarItem>
 
-                    <muxc:MenuBarItem Title="Edit">
+                    <!--<muxc:MenuBarItem Title="Edit">
                         <MenuFlyoutItem Text="Undo">
                             <MenuFlyoutItem.KeyboardAccelerators>
                                 <KeyboardAccelerator Modifiers="Control" Key="Z"/>
@@ -71,7 +71,7 @@
                                 <KeyboardAccelerator Modifiers="Control" Key="V"/>
                             </MenuFlyoutItem.KeyboardAccelerators>
                         </MenuFlyoutItem>
-                    </muxc:MenuBarItem>
+                    </muxc:MenuBarItem>-->
 
                     <muxc:MenuBarItem Title="Help">
                         <MenuFlyoutItem Text="About">
